continuing to work on core tests

--- a/setup/build_core.properties
+++ b/setup/build_core.properties
@@ -20,16 +20,22 @@ trans.map.path = core/translation_maps
 junit.test.jar.name = SolrMarcJunit.jar
 
 test.dir = ../test
-core.test.src.dir = ${test.dir}/core
+core.test.dir = ${test.dir}/core
+core.test.src.dir = ${core.test.dir}/data
 core.test.build.dir = ${solrmarc.build.dir}/test
+#test.class = org.solrmarc.CommandLineUtilTests
+test.class = org.solrmarc.GetFormatMixinTest
+#test.class = org.solrmarc.HathiJsonReaderTest
+#test.class = org.solrmarc.IndexSmokeTest
 
 #test.data.path = ${test.dir}/core/data
-test.data.path = ../test/core/data
+test.data.path = ${core.test.dir}/data
 test.config.file = ${test.data.path}/smoketest/test_config.properties
 solr.path = ${test.data.path}/solr
+test.log4j.props = ${core.test.dir}/log4j.properties
 
-cobertura.jar.dir = ${test.dir}/lib/cobertura-1.9.4.1/
+cobertura.jar.dir = ${test.dir}/lib/cobertura-1.9.4.1
 # - core.instr.dir - directory containing classes instrumented for coverage data
-core.instr.dir = ${build.dir}/instr
+core.instr.dir = ${solrmarc.build.dir}/instr
 # - core.coverage.dir - directory for coverage reports
-core.coverage.dir = ${build.dir}/coverage
+core.coverage.dir = ${solrmarc.build.dir}/coverage
