ant targets work through build_site

--- a/build.properties
+++ b/build.properties
@@ -4,11 +4,14 @@ java.compat.version = 1.5
 name = solrmarc
 
 src.dir = src
+core.src.dir = ${src.dir}/core
 lib.dir = lib
+solrj.lib.dir = ${lib.dir}/solrj-lib
 build.dir = build
+core.build.dir = ${build.dir}
 dist.dir = dist
-# soon, site.dir and build.dir should be the same
-site.dir = local_build
+log4j.props = conf/log4j.properties
+
 
 #path for executable scripts relative to the dist dir
 dist.exe.dir = bin
@@ -23,13 +26,17 @@ doc.dir = javadoc
 
 # TEST properties
 test.dir = test
-test.src.dir = ${test.dir}/src
-test.build.dir = ${test.dir}/bin
+core.test.dir = ${test.dir}
+core.test.src.dir = ${test.dir}/src
+core.test.build.dir = ${test.dir}/build
 # this must be here because of the way the ant scripts are written. :-P
 jetty.solr.war.to.copy = ${test.dir}/solr/war/apache-solr-3.5.0.war
 
-#checksum.algorithm = md5
-#tag.dir = tag
+
+#--- SITE properties ---
+site.conf.dir = conf/stanford
+site.conf.props = ${site.conf.dir}/stanford_build.properties
+
 
 #-----------------------------------------------------------
 
@@ -66,7 +73,7 @@ solr.path = test/solr
 solr.hosturl = http://localhost:8983/solr
 
 
-# TEST properties
+#----- TEST properties ---------
 
 test.class = edu.stanford.AllTests
 #test.class = edu.stanford.MiscellaneousFieldTests
