--- a/conf/stanford/stanford_build.properties
+++ b/conf/stanford/stanford_build.properties
@@ -1,5 +1,12 @@
 # ant properties for examples/stanfordBlacklight 
 
+site.basename = stanford
+
+site.dir.name = ${site.basename}
+site.lib.dir
+site.indexer.class = edu.stanford.StanfordIndexer
+site.jar.name = SolrMarcSearchWorks
+
 # - default.config - file containing your site's configuration properties for 
 #   solrmarc
 default.config = sw_config.properties
@@ -24,6 +31,7 @@ exe.mem.args = -Xmx1g
 
 
 # TEST properties
+site.test.build.dir = ${core.test.build.dir}/{site.dir}
 
 #test.class = edu.stanford.AccessTests
 test.class = edu.stanford.AllTests
