test_compile_core ant target works

--- a/build.properties
+++ b/build.properties
@@ -24,19 +24,20 @@ scripts.dir = index_scripts
 
 doc.dir = javadoc
 
-# TEST properties
+# --- TEST properties ---
 test.dir = test
+test.lib.dir = ${test.dir}/lib
 core.test.dir = ${test.dir}
-core.test.src.dir = ${test.dir}/src
+core.test.src.dir = ${test.dir}/core/src
 core.test.build.dir = ${test.dir}/build
 # this must be here because of the way the ant scripts are written. :-P
 jetty.solr.war.to.copy = ${test.dir}/solr/war/apache-solr-3.5.0.war
 
 
 #--- SITE properties ---
-site.conf.dir = conf/stanford
+site.basename = stanford
+site.conf.dir = conf/${site.basename}
 site.conf.props = ${site.conf.dir}/stanford_build.properties
-
 
 #-----------------------------------------------------------
 
@@ -74,6 +75,8 @@ solr.hosturl = http://localhost:8983/solr
 
 
 #----- TEST properties ---------
+
+
 
 test.class = edu.stanford.AllTests
 #test.class = edu.stanford.MiscellaneousFieldTests
