--- a/conf/stanford/stanford_build.properties
+++ b/conf/stanford/stanford_build.properties
@@ -1,7 +1,5 @@
 # ant properties for examples/stanfordBlacklight 
 
-site.basename = stanford
-
 site.dir.name = ${site.basename}
 site.lib.dir
 site.indexer.class = edu.stanford.StanfordIndexer
@@ -31,7 +29,8 @@ exe.mem.args = -Xmx1g
 
 
 # TEST properties
-site.test.build.dir = ${core.test.build.dir}/{site.dir}
+#site.test.build.dir = ${core.test.build.dir}/{site.dir}
+site.test.lib.dir
 
 #test.class = edu.stanford.AccessTests
 test.class = edu.stanford.AllTests
