tidied up clean targets for ant

--- a/build.properties
+++ b/build.properties
@@ -29,7 +29,7 @@ test.dir = test
 test.lib.dir = ${test.dir}/lib
 core.test.dir = ${test.dir}
 core.test.src.dir = ${test.dir}/core/src
-core.test.build.dir = ${test.dir}/build
+core.test.build.dir = ${build.dir}/${test.dir}
 # this must be here because of the way the ant scripts are written. :-P
 jetty.solr.war.to.copy = ${test.dir}/solr/war/apache-solr-3.5.0.war
 
