test_core ant target works for some core tests

--- a/build.properties
+++ b/build.properties
@@ -27,17 +27,49 @@ doc.dir = javadoc
 # --- TEST properties ---
 test.dir = test
 test.lib.dir = ${test.dir}/lib
-core.test.dir = ${test.dir}
-core.test.src.dir = ${test.dir}/core/src
+core.test.dir = ${test.dir}/core
+core.test.src.dir = ${core.test.dir}/src
 core.test.build.dir = ${build.dir}/${test.dir}
+
+#core.test.class = org.solrmarc.tools.CallNumberUnitTests
+#core.test.class = org.solrmarc.tools.CommandLineUtilTests
+core.test.class = org.solrmarc.tools.GetFormatMixinTest
+#core.test.class = org.solrmarc.tools.HathiJsonReaderTest
+#core.test.class = org.solrmarc.tools.IndexSmokeTest
+#core.test.class = org.solrmarc.tools.MergeSummaryHoldingsTests
+#core.test.class = org.solrmarc.tools.RemoteReaderTest
+#core.test.class = org.solrmarc.tools.RemoteServerTest
+#core.test.class = org.solrmarc.tools.StringNaturalCompareTest
+
+#core.test.class = org.solrmarc.tools.UtilUnitTests
+
+#- test.solr.path - Solr.home location where the TEST solr instance is found
+test.solr.path = ${test.dir}/jetty/solr
+
+test.data.path = ${core.test.dir}/data
+#test.data.file
+#test.config.dir
+#test.config.file
+test.solr.data.dir = ${test.solr.path}/data
+#test.solr.verbose
+
+
+
 # this must be here because of the way the ant scripts are written. :-P
 jetty.solr.war.to.copy = ${test.dir}/solr/war/apache-solr-3.5.0.war
+
+
 
 
 #--- SITE properties ---
 site.basename = stanford
 site.conf.dir = conf/${site.basename}
 site.conf.props = ${site.conf.dir}/stanford_build.properties
+solr.is.multicore = false
+
+
+
+
 
 #-----------------------------------------------------------
 
