--- a/setup/build_core.properties
+++ b/setup/build_core.properties
@@ -23,10 +23,10 @@ test.dir = ../test
 core.test.dir = ${test.dir}/core
 core.test.src.dir = ${core.test.dir}/data
 core.test.build.dir = ${solrmarc.build.dir}/test
-#test.class = org.solrmarc.CommandLineUtilTests
-test.class = org.solrmarc.GetFormatMixinTest
-#test.class = org.solrmarc.HathiJsonReaderTest
-#test.class = org.solrmarc.IndexSmokeTest
+#test.class = org.solrmarc.tools.CommandLineUtilTests
+#test.class = org.solrmarc.tools.GetFormatMixinTest
+test.class = org.solrmarc.tools.HathiJsonReaderTest
+#test.class = org.solrmarc.tools.IndexSmokeTest
 
 #test.data.path = ${test.dir}/core/data
 test.data.path = ${core.test.dir}/data
