--- a/build.xml
+++ b/build.xml
@@ -155,7 +155,7 @@
 		<mkdir dir="${site.test.build.dir}" />
 	</target>
 
-	<path id="test.core.classpath" description="classes and jars needed to build CORE TEST code">
+	<path id="test.core.build.classpath" description="classes and jars needed to build CORE TEST code">
 		<fileset dir="${test.lib.dir}">
 			<include name="**/*.jar" />
 		</fileset>
@@ -170,16 +170,16 @@
                 debug="true" debuglevel="lines,vars,source" 
                 encoding="utf-8" includeAntRuntime="false">
 			<include name="**/*.java" />
-			<classpath refid="test.core.classpath" />
+			<classpath refid="test.core.build.classpath" />
 		</javac>
 	</target>
 
-	<path id="test.site.classpath" description="classes and jars needed to build SITE TEST code">
+	<path id="test.site.build.classpath" description="classes and jars needed to build SITE TEST code">
 		<fileset dir="${site.test.lib.dir}">
 			<include name="**/*.jar" />
 		</fileset>
 		<pathelement location="${core.test.build.dir}"/>
-		<path refid="test.core.classpath" />
+		<path refid="test.core.build.classpath" />
 	</path>
 	
 	<target name="test_compile_site" depends="test_compile_core,test_init_site" description="Compile SITE AND CORE TEST source code into the test build directory">
@@ -189,9 +189,107 @@
                 debug="true" debuglevel="lines,vars,source" 
                 encoding="utf-8" includeAntRuntime="false">
 			<include name="**/*.java" />
-			<classpath refid="test.site.classpath" />
+			<classpath refid="test.site.build.classpath" />
 		</javac>
 	</target>
+	
+	<path id="test.core.run.classpath" description="classes and jars needed to run CORE TEST code">
+		<pathelement location="${core.test.build.dir}"/>
+		<path refid="test.core.build.classpath" />
+	</path>
+
+	<target name="test_core" depends="test_compile_core" description="run tests for CORE code">
+<!--
+		<echo message="solr.path: ${solr.path}" />
+		<echo message="solr.path being used for testing: ${site.test.solr.dir}" />
+-->
+		
+		<!-- if no core test class is defined, call the Util Unit test -->
+		<property name="core.test.class"  value="org.solrmarc.tools.UtilUnitTests" />
+
+    <junit showoutput="yes" printsummary="withOutAndErr" fork="yes" forkmode="perBatch">
+			<classpath refid="test.core.run.classpath" />
+			<formatter type="plain" usefile="false" />
+
+    	<sysproperty key="test.data.path" path="${test.data.path}" />
+			<sysproperty key="solr.data.dir" path="${test.solr.data.dir}" />
+<!--    	
+			<sysproperty key="test.data.file" value="${test.data.file}" />
+			<sysproperty key="test.config.dir" path="${dist.path}" />
+			<sysproperty key="test.config.file" value="${default.config}" />
+			<sysproperty key="solr.path" path="${site.test.solr.dir}" />
+			<sysproperty key="solr.data.dir" path="${site.test.solr.dir}/data" />
+			<sysproperty key="test.solr.verbose" value="${test.solr.verbose}" />
+-->    	
+    	
+			<test name="${core.test.class}" />
+<!--
+			<test name="${core.test.class}" />
+    	<batchtest>
+				<fileset dir="${core.test.build.dir}" includes="**/tools/*Test*.class" />
+			</batchtest>
+-->
+    	
+		</junit>
+	</target>
+	
+	
+	
+	<target name="junittest" depends="dist,testJar" description="run junit tests for bib index">
+		<echo message="solr.path: ${solr.path}" />
+		<echo message="solr.path being used for testing: ${site.test.solr.dir}" />
+		<property name="solr.jar.file.dir" value="${site.test.dir}/tmp_solr_war_jars" />
+		<get_jars_from_solr_war src="${jetty.install.dir}/webapps/solr.war" todir="${solr.jar.file.dir}" />
+		<get_jars_from_solrmarc_onejar junit="test/*.jar"  todir="${site.test.dir}/tmp_solrmarc_jars" />
+
+		<path id="test.run.classpath.jars">
+			<fileset file="${site.build.dir}/${custom.jar.name}.jar" />
+			<fileset dir="${site.test.dir}/tmp_solrmarc_jars" includes="*.jar" />
+			<fileset file="${site.test.build.dir}/${site.test.jar}" />
+			<fileset dir="${solr.jar.file.dir}" includes="*.jar" />
+		</path>
+
+		<!-- if no junit test class is defined, call the Util Unit test, which merely test some of the 
+             utility classes used by SolrMarc. -->
+		<property name="test.class"  value="org.solrmarc.index.UtilUnitTests" />
+
+		<echo message="test class = ${test.class} " />
+		<echo message="solr.data.dir = ${site.test.solr.dir}/data " />
+
+		<if >
+			<and>
+				<isset property="test.class" />
+				<available classname="${test.class}" classpathref="test.run.classpath.jars" />
+			</and>
+			<then>
+				<junit showoutput="yes" printsummary="yes" fork="yes" forkmode="once" dir="${dist.path}">
+					<formatter type="xml" usefile="yes" />
+
+					<classpath>
+						<path refid="test.run.classpath.jars" />
+					</classpath>
+
+					<sysproperty key="test.data.path" path="${test.data.dir}" />
+					<sysproperty key="test.data.file" value="${test.data.file}" />
+					<sysproperty key="test.config.dir" path="${dist.path}" />
+					<sysproperty key="test.config.file" value="${default.config}" />
+					<sysproperty key="solr.path" path="${site.test.solr.dir}" />
+					<sysproperty key="solr.data.dir" path="${site.test.solr.dir}/data" />
+					<sysproperty key="test.solr.verbose" value="${test.solr.verbose}" />
+					<test name="${test.class}" />
+				</junit>
+			</then>
+			<else>
+				<echo message="test class ${test.class} not defined or not available" />
+			</else>
+		</if>
+		<!--  Now delete the jar files that had to be un-jarred from the solr.war file for the test to run -->
+		<delete dir="${solr.jar.file.dir}" deleteonexit="true" quiet="true" />
+		<delete dir="${site.test.dir}/tmp_solrmarc_jars" deleteonexit="true" quiet="true" />
+	</target>
+
+	
+	
 	
 	
 	<target name="test_clean_core" >
@@ -200,47 +298,16 @@
 
 	<target name="test_clean_site" description="remove the directories generated for SITE testing">
 		<delete dir="$site.test.build.dir}" />
+		<delete dir="${site.test.solr.dir}/data" quiet="true" />
 	</target>
 	
 	<target name="test_clean" depends="test_clean_site,test_clean_core" description="remove the directories generated for CORE and SITE testing" />
 	
 	
-	<target name="testClean" depends="init_core" description="clean generated test directories">
-		<delete dir="${site.test.build.dir}" quiet="true" />
-		<delete dir="${site.test.solr.dir}/data" quiet="true" />
-	</target>
 
-	<target name="testInit" depends="testClean" 
-            description="create (empty) generated test directories">
-		<mkdir dir="${site.test.build.dir}" />
+	
 
-				<!-- normal single core configuration -->
-				<property name="solr.core.name" value="" />
-				<property name="solr.is.multicore" value="false" />
-	</target>
-
-	<target name="testCompile" depends="testInit,compile_core" if="test.has.source" description="Compile test source code into test build dir">
-		<get_jars_from_solrmarc_onejar junit="test/*.jar" todir="${site.test.dir}/tmp_solrmarc_jars" />
-		<path id="test.compile_core.classpath.jars" description="Jars for classpath for building/running Test code">
-			<fileset dir="${site.lib.dir}" includes="*.jar" excludes="SolrMarc.jar" />
-			<fileset file="${site.build.dir}/${custom.jar.name}.jar" />
-			<fileset dir="${site.test.dir}/tmp_solrmarc_jars" includes="*.jar" />
-		</path>
-
-		<javac destdir="${site.test.build.dir}" 
-               srcdir="${site.test.dir}/${src.dir}" 
-               target="${java.compat.version}" source="${java.compat.version}" 
-               debug="on" encoding="utf-8">
-			<include name="**/*.java" />
-			<classpath>
-				<path refid="test.compile_core.classpath.jars" />
-			</classpath>
-		</javac>
-		<delete dir="${site.build.dir}/tmp_extra" />
-		<delete dir="${site.test.dir}/tmp_solrmarc_jars" deleteonexit="true" />
-	</target>
-
-	<target name="testJar" depends="build_core,testCompile" if="test.has.source" description="jar up test class files">
+	<target name="testJar" depends="build_core,test_compile_core" if="test.has.source" description="jar up test class files">
 		<echo message=" creating test jar :  ${site.test.build.dir}/${site.test.jar}" />
 		<jar destfile="${site.test.build.dir}/${site.test.jar}" >
 			<fileset dir="${site.test.build.dir}" includes="**/*.class" />
@@ -269,7 +336,7 @@
 		</copy>
 	</target>
 
-	<target name="smoketest" depends="dist,testInit" description="start jetty pointing at test solr, index file, then look for it.">
+	<target name="smoketest" depends="dist,test_init_core" description="start jetty pointing at test solr, index file, then look for it.">
 		<if>
 			<equals arg1="${solr.is.multicore}" arg2="false" />
 			<then>
@@ -400,58 +467,6 @@
 		</antcall>
 	</target>
 
-	<target name="junittest" depends="dist,testJar" description="run junit tests for bib index">
-		<echo message="solr.path: ${solr.path}" />
-		<echo message="solr.path being used for testing: ${site.test.solr.dir}" />
-		<property name="solr.jar.file.dir" value="${site.test.dir}/tmp_solr_war_jars" />
-		<get_jars_from_solr_war src="${jetty.install.dir}/webapps/solr.war" todir="${solr.jar.file.dir}" />
-		<get_jars_from_solrmarc_onejar junit="test/*.jar"  todir="${site.test.dir}/tmp_solrmarc_jars" />
-
-		<path id="test.run.classpath.jars">
-			<fileset file="${site.build.dir}/${custom.jar.name}.jar" />
-			<fileset dir="${site.test.dir}/tmp_solrmarc_jars" includes="*.jar" />
-			<fileset file="${site.test.build.dir}/${site.test.jar}" />
-			<fileset dir="${solr.jar.file.dir}" includes="*.jar" />
-		</path>
-
-		<!-- if no junit test class is defined, call the Util Unit test, which merely test some of the 
-             utility classes used by SolrMarc. -->
-		<property name="test.class"  value="org.solrmarc.index.UtilUnitTests" />
-
-		<echo message="test class = ${test.class} " />
-		<echo message="solr.data.dir = ${site.test.solr.dir}/data " />
-
-		<if >
-			<and>
-				<isset property="test.class" />
-				<available classname="${test.class}" classpathref="test.run.classpath.jars" />
-			</and>
-			<then>
-				<junit showoutput="yes" printsummary="yes" fork="yes" forkmode="once" dir="${dist.path}">
-					<formatter type="xml" usefile="yes" />
-
-					<classpath>
-						<path refid="test.run.classpath.jars" />
-					</classpath>
-
-					<sysproperty key="test.data.path" path="${test.data.dir}" />
-					<sysproperty key="test.data.file" value="${test.data.file}" />
-					<sysproperty key="test.config.dir" path="${dist.path}" />
-					<sysproperty key="test.config.file" value="${default.config}" />
-					<sysproperty key="solr.path" path="${site.test.solr.dir}" />
-					<sysproperty key="solr.data.dir" path="${site.test.solr.dir}/data" />
-					<sysproperty key="test.solr.verbose" value="${test.solr.verbose}" />
-					<test name="${test.class}" />
-				</junit>
-			</then>
-			<else>
-				<echo message="test class ${test.class} not defined or not available" />
-			</else>
-		</if>
-		<!--  Now delete the jar files that had to be un-jarred from the solr.war file for the test to run -->
-		<delete dir="${solr.jar.file.dir}" deleteonexit="true" quiet="true" />
-		<delete dir="${site.test.dir}/tmp_solrmarc_jars" deleteonexit="true" quiet="true" />
-	</target>
 
 	<!-- **********  Cobertura Code Coverage *********** -->
 	<path id="cobertura.classpath">
