all but three core tests pass

--- a/build.properties
+++ b/build.properties
@@ -24,6 +24,9 @@ scripts.dir = index_scripts
 
 doc.dir = javadoc
 
+solr.war.path = ${site.dir}/solrConf/apache-solr-3.5.0.war
+
+
 # --- TEST properties ---
 test.dir = test
 test.lib.dir = ${test.dir}/lib
@@ -31,33 +34,42 @@ core.test.dir = ${test.dir}/core
 core.test.src.dir = ${core.test.dir}/src
 core.test.build.dir = ${build.dir}/${test.dir}
 
-#core.test.class = org.solrmarc.tools.CallNumberUnitTests
-#core.test.class = org.solrmarc.tools.CommandLineUtilTests
-core.test.class = org.solrmarc.tools.GetFormatMixinTest
-#core.test.class = org.solrmarc.tools.HathiJsonReaderTest
-#core.test.class = org.solrmarc.tools.IndexSmokeTest
-#core.test.class = org.solrmarc.tools.MergeSummaryHoldingsTests
-#core.test.class = org.solrmarc.tools.RemoteReaderTest
-#core.test.class = org.solrmarc.tools.RemoteServerTest
-#core.test.class = org.solrmarc.tools.StringNaturalCompareTest
+core.test.use_solr_server_proxy = true
+core.test.use_binary_request_handler = true
+core.test.use_streaming_proxy = true
 
-#core.test.class = org.solrmarc.tools.UtilUnitTests
-
-#- test.solr.path - Solr.home location where the TEST solr instance is found
-test.solr.path = ${test.dir}/jetty/solr
-
-test.data.path = ${core.test.dir}/data
+core.test.data.path = ${core.test.dir}/data
 #test.data.file
 #test.config.dir
-#test.config.file
+core.test.config.file = ${core.test.dir}/test_core_config.properties
+
+### core.test.class = org.solrmarc.tools.CallNumberUnitTests
+#core.test.class = org.solrmarc.tools.CommandLineUtilTests
+### core.test.class = org.solrmarc.tools.GetFormatMixinTest
+### core.test.class = org.solrmarc.tools.HathiJsonReaderTest
+core.test.class = org.solrmarc.tools.IndexSmokeTest
+### core.test.class = org.solrmarc.tools.MergeSummaryHoldingsTests
+### core.test.class = org.solrmarc.tools.RecordReaderTest
+#core.test.class = org.solrmarc.tools.RemoteServerTest
+### core.test.class = org.solrmarc.tools.StringNaturalCompareTest
+### core.test.class = org.solrmarc.tools.UtilUnitTests
+
+# test.solr.path - Solr.home location where the TEST solr instance is found
+test.solr.path = ${test.dir}/jetty/solr
 test.solr.data.dir = ${test.solr.path}/data
-#test.solr.verbose
+test.solr.verbose = true
 
 
+test.jetty.dir = ${test.dir}/jetty
+test.solr.orig.dir = ${test.dir}/solr
+test.solr.run.dir = ${test.jetty.dir}/solr
 
-# this must be here because of the way the ant scripts are written. :-P
-jetty.solr.war.to.copy = ${test.dir}/solr/war/apache-solr-3.5.0.war
+core.solr.war.path = ${solr.war.path}
 
+#- test.solr.hosturl - URL of where the solr server is running
+test.solr.hosturl = http://localhost:8987/solr
+
+cobertura.jar.dir = ${test.lib.dir}/cobertura-1.9.4.1
 
 
 
@@ -67,17 +79,11 @@ site.conf.dir = conf/${site.basename}
 site.conf.props = ${site.conf.dir}/stanford_build.properties
 solr.is.multicore = false
 
-
-
-
-
-#-----------------------------------------------------------
-
 # - example.configuration - name of example configuration that your site is based on.
-example.configuration = stanford
+#example.configuration = stanford
 
 # - dist.path - full path of where the distribution should be written
-dist.path = /Users/ndushay/searchworks/solrmarc-sw/dist
+#dist.path = /Users/ndushay/searchworks/solrmarc-sw/dist
 
 # ant properties for examples/stanford 
 
@@ -90,7 +96,7 @@ default.config = sw_config.properties
 #  sw-solr-xxx
 #solrmarc.solr.war.path = /home/blacklight/solr-war/apache-solr-3.5.0.war
 #  continuous integration and laptop
-solrmarc.solr.war.path = ${site.dir}/solrConf/apache-solr-3.5.0.war
+site.solr.war.path = ${solr.war.path}
 
 
 # - solr.path - used when building your site's solrmarc, if you're using Solr
@@ -100,7 +106,7 @@ solrmarc.solr.war.path = ${site.dir}/solrConf/apache-solr-3.5.0.war
 #  laptop
 #solr.path = /Users/ndushay/NGDE/solr/jetty-solr1.5/solr
 #  testing (Hudson)
-solr.path = test/solr
+site.test.solr.path = test/solr
 
 #- solr.hosturl - URL of where the solr server is running
 solr.hosturl = http://localhost:8983/solr
@@ -113,31 +119,28 @@ solr.hosturl = http://localhost:8983/solr
 test.class = edu.stanford.AllTests
 #test.class = edu.stanford.MiscellaneousFieldTests
 
-jetty.site.location = ${test.dir}/jetty
-jetty.solr.war.to.copy = ${site.dir}/solrConf/apache-solr-3.5.0.war
+#jetty.site.location = ${test.dir}/jetty
+#jetty.solr.war.to.copy = ${site.dir}/solrConf/apache-solr-3.5.0.war
 
 #- test.solrmarc.solr.war.path - location of solr.war containing solr jar libraries 
 #                           or directory that contains those solr jar libraries for TEST instance
-test.solrmarc.solr.war.path = ${site.dir}/solrConf/apache-solr-3.5.0.war
+#test.solrmarc.solr.war.path = ${site.dir}/solrConf/apache-solr-3.5.0.war
 
 #- test.solr.path - Solr.home location where the TEST solr configuration is found
-test.solr.path = ${test.dir}/jetty/solr
+#test.solr.path = ${test.dir}/jetty/solr
 
-#- test.solr.hosturl - URL of where the solr server is running
-test.solr.hosturl = http://localhost:8987/solr
 
 #- jetty.test.port - port where test instance of jetty should be started
-jetty.test.port = 8987
+#jetty.test.port = 8987
 
 # - cobertura.jar.dir - directory containing cobertura jar file(s)
-cobertura.jar.dir = test/lib/cobertura-1.9.4.1/
-cobertura.jar.path = test/lib/cobertura-1.9.4.1
+#cobertura.jar.path = test/lib/cobertura-1.9.4.1
 
 # - cobertura.instr.dir - directory containing classes instrumented for coverage data
-cobertura.instr.dir = instr
+#cobertura.instr.dir = instr
 
 # - cobertura.coverage.dir - directory for coverage reports
-cobertura.coverage.dir = build/coverage/cobertura
+#cobertura.coverage.dir = build/coverage/cobertura
 
 # - maximum.expected.recs.in.test.solr - If more than this number of records is found in the 
 # test solr instance, terminate the smoketest target before performing the delete_all_records step.
