a command tries to start jetty but fails - still using embedded core

--- a/build.properties
+++ b/build.properties
@@ -55,19 +55,22 @@ core.test.class = org.solrmarc.tools.IndexSmokeTest
 ### core.test.class = org.solrmarc.tools.UtilUnitTests
 
 # test.solr.path - Solr.home location where the TEST solr instance is found
-test.solr.path = ${test.dir}/jetty/solr
+test.jetty.dir = ${test.dir}/jetty
+test.jetty.port = 8985
+test.solr.url = http://localhost:${test.jetty.port}/solr
+test.solr.path = ${test.jetty.dir}/solr
 test.solr.data.dir = ${test.solr.path}/data
 test.solr.verbose = true
 
 
-test.jetty.dir = ${test.dir}/jetty
 test.solr.orig.dir = ${test.dir}/solr
 test.solr.run.dir = ${test.jetty.dir}/solr
 
 core.solr.war.path = ${solr.war.path}
 
 #- test.solr.hosturl - URL of where the solr server is running
-test.solr.hosturl = http://localhost:8987/solr
+#test.solr.hosturl = http://localhost:8987/solr
+test.jetty.port = 8987
 
 cobertura.jar.dir = ${test.lib.dir}/cobertura-1.9.4.1
 
